--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "phaser": "^3.80.1",
+        "typescript": "^5.7.2",
         "vue": "^3.4.27"
     },
     "devDependencies": {
